--- a/_posts/2019-05-13-how-to-git.md
+++ b/_posts/2019-05-13-how-to-git.md
@@ -1,8 +1,8 @@
 ---
 layout: posts
-title:  "Git - I wanna be the very best."
+title:  "I wanna be the very best."
 categories: [git]
-tags: [git, how-to]
+tags: [git]
 ---
 
 Git is a collection of command line utilities that track and record
